--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,12 @@ dependencies:
   cupertino_icons: ^1.0.8
   firebase_core: ^4.4.0
   cloud_firestore: ^6.1.2
+  firebase_auth: ^6.1.4
+  google_generative_ai: ^0.4.7
+  google_maps_flutter: ^2.14.2
+  geolocator: ^14.0.2
+  image_picker: ^1.2.1
+  firebase_storage: ^13.0.6
 
 dev_dependencies:
   flutter_test:
