--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   firebase_core: ^4.4.0
   cloud_firestore: ^6.1.2
+  google_sign_in: ^7.2.0
+  google_maps_flutter: ^2.14.2
 
 dev_dependencies:
   flutter_test:
