--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   google_generative_ai: ^0.4.7
   google_maps_flutter: ^2.14.2
   geolocator: ^14.0.2
+  geocoding: ^3.0.0
   http: ^1.2.0
   image_picker: ^1.2.1
   firebase_storage: ^13.0.6
