--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,27 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+  fonts:
+    - family: Lexend
+      fonts:
+        - asset: assets/fonts/Lexend/Lexend-Thin.ttf
+          weight: 100
+        - asset: assets/fonts/Lexend/Lexend-ExtraLight.ttf
+          weight: 200
+        - asset: assets/fonts/Lexend/Lexend-Light.ttf
+          weight: 300
+        - asset: assets/fonts/Lexend/Lexend-Regular.ttf
+          weight: 400
+        - asset: assets/fonts/Lexend/Lexend-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/Lexend/Lexend-SemiBold.ttf
+          weight: 600
+        - asset: assets/fonts/Lexend/Lexend-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/Lexend/Lexend-ExtraBold.ttf
+          weight: 800
+        - asset: assets/fonts/Lexend/Lexend-Black.ttf
+          weight: 900
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
