--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   file_saver: ^0.2.12
   google_maps_flutter: ^2.6.1
   google_maps_flutter_web: ^0.5.0
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
@@ -64,7 +65,10 @@ flutter:
   uses-material-design: true
 
   assets:
+    - assets/logo.png
+    - assets/sw.png
     - assets/no-station.png
+
   fonts:
     - family: Lexend
       fonts:
