--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   geolocator: ^14.0.2
   geocoding: ^3.0.0
   intl: ^0.19.0
+  fl_chart: ^0.66.0
   http: ^1.2.0
   image_picker: ^1.2.1
   firebase_storage: ^13.0.6
@@ -71,9 +72,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
