--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   http: ^1.2.0
   image_picker: ^1.2.1
   firebase_storage: ^13.0.6
+  google_sign_in: ^7.2.0
 
 dev_dependencies:
   flutter_test:
